refactoring todolist.js: add event adding an event handler to the form to prevent page reloading
feat style.css : add cursor pointer on title and delete button in task

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
   gap: 10px;
 }
 
+.delete-button,
+.task-title {
+  cursor: pointer;
+}
+
 .done .task-title {
   text-decoration: line-through;
 }
